[tool.poetry]
name = "byol-torch"
version = "0.1.0"
description = ""
authors = ["crazyboy9103 <gil9103@gmail.com>"]
readme = "README.md"
packages = [{include = "byol_torch"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
